css/style.css
/* ... */
.mil-main-menu ul li a:hover {
  color: rgb(255, 255, 255);
}
.mil-main-menu ul li a.mil-active {
  padding-left: 25px;
}
.mil-main-menu ul li a.mil-active:before {
  -webkit-transform: scale(1);
          transform: scale(1);
  background-color: rgb(45, 45, 77);
}
.mil-main-menu ul li.mil-active > a {
  color: rgb(45, 45, 77);
}
.mil-main-menu ul li.mil-active > a:hover {
  color: rgb(45, 45, 77) !important;
  -webkit-filter: brightness(110%);
          filter: brightness(110%);
}
.mil-main-menu ul li.mil-has-children > a:hover {
  color: rgb(255, 255, 255);
  padding-left: 25px;
}
.mil-main-menu ul li.mil-has-children > a:hover:before {
  -webkit-transform: scale(1);
          transform: scale(1);
}
.mil-main-menu ul li.mil-has-children ul {
  padding-left: 25px;
  overflow: hidden;
  max-height: 0;
  -webkit-transition: 0.6s cubic-bezier(0, 0, 0.3642, 1);
  transition: 0.6s cubic-bezier(0, 0, 0.3642, 1);
}
.mil-main-menu ul li.mil-has-children ul li {
  margin-bottom: 5px;
}
.mil-main-menu ul li.mil-has-children ul li:first-child {
  margin-top: 40px;
}
.mil-main-menu ul li.mil-has-children ul li a {
  display: block;
  font-size: 12px;
  color: rgba(255, 255, 255, 0.4);
  letter-spacing: 2px;
  font-weight: 500;
  text-transform: uppercase;
}
.mil-main-menu ul li.mil-has-children ul li a:before {
  display: none;
}
.mil-main-menu ul li.mil-has-children ul li a:hover {
  color: rgba(255, 255, 255, 0.8);
  -webkit-transform: translateX(5px);
          transform: translateX(5px);
}
.mil-main-menu ul li.mil-has-children ul.mil-active {
  max-height: 200px;
}
@media screen and (max-width: 1200px) {
  .mil-main-menu {
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
  }
  .mil-main-menu ul {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
  }
  .mil-main-menu ul li {
    margin-bottom: 30px;
  }
  .mil-main-menu ul li a {
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
  }
  .mil-main-menu ul li a:before {
    display: none;
  }
  .mil-main-menu ul li a.mil-active {
    padding-left: 0 !important;
  }
  .mil-main-menu ul li.mil-has-children ul {
    padding-left: 0;
  }
  .mil-main-menu ul li.mil-has-children ul li:first-child {
    margin-top: 30px;
  }
}

/* -------------------------------------------

banner

------------------------------------------- */
.mil-banner {
  height: 100vh;
}
.mil-banner .mil-hero-video {
  position: absolute;
  inset: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  z-index: 1;
  pointer-events: none;
  opacity: 0.68;
  /* Grade dark red footage toward brand-aligned dark blue */
  filter: hue-rotate(168deg) saturate(1.45) brightness(0.58) contrast(1.1);
}
.mil-banner .mil-animation-frame {
  display: none;
}
.mil-banner.mil-dark-bg:before {
  -webkit-backdrop-filter: none;
          backdrop-filter: none;
  background: linear-gradient(140deg, rgba(45, 45, 77, 0.72) 0%, rgba(43, 135, 189, 0.32) 55%, rgba(45, 45, 77, 0.62) 100%);
}
.mil-banner .mil-gradient {
  display: none;
}
.mil-banner .container {
  height: 100%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: end;
      -ms-flex-align: end;
          align-items: flex-end;
}
.mil-banner .mil-banner-content {
  width: 100%;
  padding-bottom: 120px;
  position: relative;
}
@media screen and (max-width: 992px) {
  .mil-banner .mil-banner-content {
    padding-bottom: 90px;
  }
}
.mil-banner .mil-lines-place {
  position: absolute;
  left: 0;
  bottom: calc(100% + 120px);
}

.mil-inner-banner .mil-banner-content {
  padding: 150px 0 0 0;
}
@media screen and (max-width: 1200px) {
  .mil-inner-banner .mil-banner-content {
    padding: 180px 0 0 0;
  }
}

.mil-banner-personal {
  height: 100vh;
  background-color: rgba(43, 135, 189, 0.1);
}
.mil-banner-personal .mil-banner-content {
  position: relative;
  padding-top: 90px;
}
@media screen and (max-width: 992px) {
  .mil-banner-personal .mil-banner-content {
    padding-top: 180px;
  }
}
.mil-banner-personal .mil-banner-content .mil-personal-text {
  margin-bottom: 300px;
}
@media screen and (max-width: 992px) {
  .mil-banner-personal .mil-banner-content .mil-personal-text {
    margin-bottom: 80px;
    text-align: center;
  }
}
.mil-banner-personal .mil-banner-content .mil-banner-panel {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  padding: 0 60px 0 90px;
  background-color: rgb(255, 255, 255);
  height: 180px;
  position: absolute;
  top: calc(100vh - 180px);
  left: 0;
  width: 100%;
}
@media screen and (max-width: 992px) {
  .mil-banner-personal .mil-banner-content .mil-banner-panel {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    height: auto;
    padding: 60px 30px;
  }
  .mil-banner-personal .mil-banner-content .mil-banner-panel h5 {
    margin-bottom: 60px;
    text-align: center;
    width: 80%;
  }
}
.mil-banner-personal .mil-banner-content .mil-banner-panel .mil-right {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}
/* ... */

